# soundLocalizer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/scripts/: soundLocalizer.xml
include/iCub/: soundLocalizerModule.h
python-scripts/: AudioRecorder.py  AudioRecorder.spec  CMakeLists.txt  requirements.txt
python-scripts/analysis/: CONFIG.py  __init__.py  audio_utils.py  createDataset.py  dataGenerator.py  elegant.mplstyle  models.py  requirements.txt  test.py  train.py  utils.py  visualization.py
python-scripts/analysis/data/: analysis.ipynb  createDataset.py  create_background_dataset.py  create_dataset.ipynb  process_subjects.ipynb  test.py  utils.py
python-scripts/analysis/gammatone/: plot.py
python-scripts/analysis/ml/: dataGenerator.py  models.py  test.py  test_model.py  test_robot.py  train.py  utils_ml.py
src/: main.cpp  soundLocalizer.cpp
